# T-Nexus

./: .dockerignore  .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml  nano_data.csv  pyproject.toml
.github/workflows/: cd.yaml
assets/: README.md
scripts/: performance_check.py
src/: README.md
src/ml/: DESIGN.md
src/ml/config/: __init__.py  hipporag.yaml  loader.py
src/ml/embeddings/: __init__.py
src/ml/extraction/: openie.py
src/ml/hipporag/: __init__.py  pipeline.py
src/ml/llm/: __init__.py  base.py
src/ml/messaging/: __init__.py
src/ml/prompts/: filter_default_prompt.py  prompt_template_manager.py
src/ml/prompts/templates/: __init__.py  ner.py  rag_qa_musique.py
src/ml/utils/: data.py  document_converter.py  hashing.py  llm.py  text.py
src/ml/vectorstores/: __init__.py  factory.py  memory.py  qdrant.py
src/t-nexus/: run_bot.py
src/t-nexus/backend/routers/: auth_router.py  manual_review_router.py
src/t-nexus/backend/telegram/: __init__.py  tg_database.py
src/t-nexus/frontend/: register.html
src/t-nexus/judge/: batched_generation.py
src/t-nexus/ml/config/: schema.py
src/t-nexus/ml/embeddings/: base.py  openai.py
src/t-nexus/ml/extraction/: __init__.py
src/t-nexus/ml/graph/: __init__.py  neo4j_store.py
src/t-nexus/ml/hipporag/: conversation.py
src/t-nexus/ml/llm/: openai.py
src/t-nexus/ml/messaging/: rabbitmq.py
src/t-nexus/ml/prompts/: __init__.py
src/t-nexus/ml/utils/: __init__.py
src/t-nexus/ml/vectorstores/: milvus.py
src/t_nexus/: Dockerfile  README.md  main.py  run_bot.py
src/t_nexus/backend/: auth.py  config.py  models.py
src/t_nexus/backend/routers/: __init__.py  auth_router.py  manual_review_router.py  metrics_router.py  notifications_router.py  overview_router.py  rag_router.py
src/t_nexus/backend/services/: placeholder_data.py
src/t_nexus/backend/telegram/: __init__.py  bot.py
src/t_nexus/db/: README.md
src/t_nexus/frontend/: index.html
src/t_nexus/ml/: __init__.py
src/t_nexus/ml/config/: __init__.py  hipporag.yaml  loader.py  schema.py
src/t_nexus/ml/embeddings/: __init__.py  base.py  openai.py
src/t_nexus/ml/extraction/: __init__.py  openie.py
src/t_nexus/ml/graph/: __init__.py  neo4j_store.py
src/t_nexus/ml/hipporag/: __init__.py  conversation.py  pipeline.py
src/t_nexus/ml/llm/: __init__.py  base.py  openai.py
src/t_nexus/ml/messaging/: __init__.py  rabbitmq.py
src/t_nexus/ml/prompts/: __init__.py  linking.py
src/t_nexus/ml/utils/: __init__.py  data.py  document_converter.py  llm.py  rate_limiter.py  text.py
src/t_nexus/ml/vectorstores/: __init__.py  base.py  factory.py  (+3 more)
t-nexus/: README.md  run_bot.py
t-nexus/backend/: config.py  database.py  main.py  models.py  schemas.py  tnexus.db
t-nexus/backend/routers/: __init__.py  metrics_router.py  notifications_router.py
t-nexus/backend/telegram/: bot.py
t-nexus/frontend/: index.html  login.html
tests/: README.md  validation_set.csv
(+3 files in other folders)
