[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "t-nexus"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "torch",
    "nx-cugraph-cu12",
    "optimum==1.27.0",
    "transformers==4.48.0",
    "numpy>2",
    "openai>=1.60.1",
    "pika>=1.3.2",
    "pyyaml>=6.0.2",
    "neo4j>=5.27.0",
    "qdrant-client>=1.12.0",
    # "pymilvus>=2.5.4",
    "networkx>=3.1",
    "fastapi",
    "uvicorn",
    "docling",
    "tenacity>=8.2.2",
]

[tool.setuptools.packages.find]
where = ["t-nexus"] 

[tool.ruff]
lint.ignore = [
    "C901", # `function_name` is too complex
    "E501", # line length violation
    "E741" # Ambiguous variable name
]
lint.select = [
    "C",
    "E",
    "F",
    "I",
    "W",
    "NPY201", # numpy 2.0.0
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401" # module imported but unused
]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = [
  "t-nexus"
]

[tool.uv.workspace]
members = [
    "T-Nexus",
]

# pip install nx-cugraph-cu12 --extra-index-url https://pypi.nvidia.com
